完善swaager脚本
